contributor header behind of scrollbar and some css fix

--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -254,7 +254,6 @@
     transform: scale(.7);
     opacity: 0;
     transition: all .3s cubic-bezier(.74,-.05,.27,1.75);
-    overflow-y: scroll;
     z-index: 9999;
     top: 0;
     bottom: 0;
@@ -283,7 +282,10 @@
 /* .ep_profile_user_list_date_title{
 
 } */
-
+.ep_profile_contributors_scroll{
+    overflow-y: scroll;
+    height: 584px;
+}
 .ep_profile_user_list_date_title_header{
     width: 100%;
     height: 80px;
@@ -347,7 +349,7 @@
     line-height: 134.19%;
     color: #848484;
     float: right;
-    max-width: 114px;
+    max-width: 120px;
     height: 17px;
     padding-top: 1px;
 }
@@ -406,7 +408,7 @@
 .ep_profile_user_list_profile_desc {
     text-align: left;
     word-break: break-all;
-    height: 25px;
+    height: 50px;
     overflow: hidden;
     font-family: Roboto;
     font-style: normal;
